testData/annotator/scopedAccess.pas
var
  a, b:Integer;

procedure test();
begin
  b.<error descr="Undeclared identifier">a</error>;
end;

begin
  b.<error descr="Undeclared identifier">a</error>;
end.
